beta 1.1.0+18 submission state
-instruments not working
-heavy thermal load in daw
-still working state
-lot of stale/dead code and stuff not even being referenced, next step will deprecate and cut lot of code
